0030154: [REGRESSION] Modeling Algorithms - Boolean Operation on planar geometry hangs inside BRepLib::FindValidRange()

Do not allow the precision with which the valid range is found to be less than the epsilon of the max parameter of the edge's range.
Test cases for the issue.